added game logic

--- a/index.html
+++ b/index.html
@@ -9,64 +9,64 @@
 
 <body>
     <div class="container">
-        <div class="memory-card">
-            <img class="front-face" src="img/angularImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="angular">
+            <img class="front-face" src="img/angularImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/bootstrapImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="bootstrap">
+            <img class="front-face" src="img/bootstrapImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/cssImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="css">
+            <img class="front-face" src="img/cssImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/githubImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="github">
+            <img class="front-face" src="img/githubImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/htmlImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="html">
+            <img class="front-face" src="img/htmlImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/reactImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="react">
+            <img class="front-face" src="img/reactImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/githubImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="github">
+            <img class="front-face" src="img/githubImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/htmlImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="html">
+            <img class="front-face" src="img/htmlImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/reactImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="react">
+            <img class="front-face" src="img/reactImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/angularImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="angular">
+            <img class="front-face" src="img/angularImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/bootstrapImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="bootstrap">
+            <img class="front-face" src="img/bootstrapImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
 
-        <div class="memory-card">
-            <img class="front-face" src="img/cssImg.jpg" alt="Memory Card">
-            <img class="back-face" src="img/jsImg.jpg" alt="React">
+        <div class="memory-card" data-name="css">
+            <img class="front-face" src="img/cssImg.jpg">
+            <img class="back-face" src="img/jsImg.jpg">
         </div>
     </div>
 
